--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -37,9 +37,10 @@
   </head>
 
   <body>
-    <%- body %>
 
-
+    <div class="container">
+      <%- body %>
+    </div>
 
     <!--
         Client-side Templates
